Implement DAL * Move object storing functionality from service to repository * Add DTO objects